* Board 관련 파라미터에서 좌표를 tuple로 받도록 수정 * Board 정보 반환 메서드 추가 * Game, PlayerInterface 및 RandomPlayer class 구현 * 현재 player 추적을 Game에서 관리하도록 변경

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 .vscode/settings.json
 __pycache__/board.cpython-38.pyc
+player/__pycache__/playerInterface.cpython-38.pyc
+player/__pycache__/randomPlayer.cpython-38.pyc
