getBoardStatus의 반환 타입 수정 view, controller class의 이름 수정

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 __pycache__/board.cpython-38.pyc
 player/__pycache__/playerInterface.cpython-38.pyc
 player/__pycache__/randomPlayer.cpython-38.pyc
+__pycache__/game.cpython-38.pyc
