MVC 패턴 정리 완료

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ __pycache__/board.cpython-38.pyc
 player/__pycache__/playerInterface.cpython-38.pyc
 player/__pycache__/randomPlayer.cpython-38.pyc
 __pycache__/game.cpython-38.pyc
+__pycache__/boardView.cpython-38.pyc
+__pycache__/boardViewController.cpython-38.pyc
