current player 계산을 Game이 담당하도록 변경 view controller에 game 추가 game에서 한단계의 move를 진행한 뒤 state를 업데이트하는 메서드 추가

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ player/__pycache__/randomPlayer.cpython-38.pyc
 __pycache__/game.cpython-38.pyc
 __pycache__/boardView.cpython-38.pyc
 __pycache__/boardViewController.cpython-38.pyc
+player/__pycache__/humanPlayer.cpython-38.pyc
