--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,9 @@ train/__pycache__/othelloGameWrapper.cpython-38.pyc
 train/__pycache__/othelloNet.cpython-38.pyc
 train/__pycache__/othelloNetWrapper.cpython-38.pyc
 train/__pycache__/utils.cpython-38.pyc
-temp/temp.pth.tar
-temp/checkpoint_0.pth.tar.examples
 train/__pycache__/GameModel.cpython-38.pyc
 player/__pycache__/aiPlayer.cpython-38.pyc
 __pycache__/train.cpython-38.pyc
+temp/
+player/__pycache__/AIPruningPlayer.cpython-38.pyc
+train/__pycache__/othello6x6VGGNet.cpython-38.pyc
